Construct structs using default API constructor

If the struct has something that looks like a default constructor,
use it instead of trying to directly allocate it, as it will fail
if the struct fields are not exposed.

https://bugzilla.gnome.org/show_bug.cgi?id=627444